<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">百维阳光后台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">登陆</string>
    <string name="name_hint">请输入你的用户名</string>
    <string name="passwd_hint">请输入你的密码</string>
    <string name="title_activity_frist_screen">引导页</string>
    <string name="title_section1">管理首页</string>
    <string name="title_section2">修改密码</string>
    <string name="title_section3">退出系统</string>
    <string name="button_submit">提交</string>
    <string name="button_query">查询</string>
    <string name="button_back">返回</string>
    <string name="create_card">开卡服务</string>
    <string name="cash_washing">现金洗车</string>
    <string name="card_record">开卡记录</string>
    <string name="wash_record">洗车记录</string>
    <string name="free_washing">免费洗车</string>
    <string name="repairing_cars">在修车辆查询</string>
    <string name="repaired_cars">完工车辆查询</string>
    <string name="exit_system">退出系统</string>
    <string name="old_passwd">请输入原始密码</string>
    <string name="new_passwd">请输入新的密码</string>
    <string name="confirm_passwd">请再次输入新的密码</string>
    <string name="yes">确认修改</string>
    <string name="no">取消</string>
    <string name="exit_txt">真的要退出吗？</string>
    <string name="button_yes">确定</string>
    <string name="button_no">取消</string>
    <string name="title_activity_service_on_plate">ServiceOnPlate</string>
    <string name="aw_voucher">外观洗车券</string>
    <string name="sw_voucher">标准洗车券</string>
    <string name="cc_record">洗车记录</string>
    <string name="rm_record">维保记录</string>
    <string name="car_info">车辆信息</string>
    <string name="card_service">开卡服务</string>
    <string name="bind_car">绑定车辆</string>
    <string name="reset_passwd">重置密码</string>
    <string name="type">选择类型</string>
    <string name="cc_type">洗车类型</string>
    <string name="expense_way">付款方式</string>
    <string name="customer_type">客户类型</string>
    <string name="cc_staff">洗车员工</string>

    <string-array name="customer">
        <item>普通客户</item>
        <item>重要客户</item>
        <item>VIP客户</item>
    </string-array>
    <string-array name="cc_type">
        <item>标准洗车</item>
        <item>外观洗车</item>
    </string-array>
    <string-array name="expense">
        <item>现金</item>
        <item>POS</item>
        <item>拉卡拉</item>
        <item>支付宝</item>
        <item>券</item>
        <item>记账</item>
        <item>免单</item>
        <item>支票</item>
        <item>微信</item>
        <item>美团</item>
    </string-array>
    <string-array name="staffs">
        <item>张力组</item>
        <item>高贵昌组</item>
    </string-array>

    <string name="title_activity_show_records">免费洗车记录</string>
    <string name="error_1013">抱歉，用户名或密码不正确，请重新输入</string>
    <string name="error_0">别这样，别调戏我</string>
    <string name="title_activity_show_crrecords">开卡记录</string>
    <string name="title_activity_show_red_records">完工车辆查询</string>
    <string name="title_activity_show_ring_records">再修车辆查询</string>
    <string name="title_activity_plate_show_crrecords">车牌洗车记录</string>
    <string name="title_activity_plate_show_rm_records">车牌维保记录</string>
    <string name="title_activity_plate_show_carinfo">车辆信息</string>
    <string name="title_activity_show_items_rm">车牌维保详情</string>

</resources>
