<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exit"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.beswell.car.IndexScreen$PlaceholderFragment">

    <TextView
        android:id="@+id/exit_tv"
        android:text="@string/exit_txt"
        android:gravity="center"
        android:textSize="40px"
        android:paddingBottom="20px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/yes_button"
            android:text="@string/button_yes"
            android:textColor="#ffffff"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:background="@drawable/buttonshape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:id="@+id/no_button"
            android:text="@string/button_no"
            android:textColor="#ffffff"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:background="@drawable/buttonshape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
